--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "fullstack-internship-billyluy"
 type = "javascript"
-account_id = ""
+account_id = "1e4afbccc9e3140af253eec60d0d5eaa"
 workers_dev = true
 route = ""
 zone_id = ""
